Added ignore rules for automake generated files

--- a/.bzrignore
+++ b/.bzrignore
@@ -4,3 +4,9 @@ build/*
 build/**/*
 build-aux/*
 build-aux/**/*
+Makefile.in
+aclocal.m4
+configure
+autom4te.cache
+autom4te.cache/*
+autom4te.cache/**/*
