--- a/configs/z-aiki.in
+++ b/configs/z-aiki.in
@@ -1,9 +1,9 @@
 # @PACKAGE@ - web framework written in php
 
-Alias /@PACKAGE@ @AIKI_DATA_DIR@
+Alias /@PACKAGE@ @PKG_DATA_DIR@
 
 # The following directories require access over HTTP
-<Directory @AIKI_DATA_DIR@/>
+<Directory @PKG_DATA_DIR@/>
     Order Allow,Deny
     Allow from All
     Deny from None
