--- a/desktop/Makefile.am
+++ b/desktop/Makefile.am
@@ -3,7 +3,11 @@
 
 # The desktop entry files
 aiki_entry_files = \
-	$(PACKAGE).desktop
+	$(PACKAGE).desktop \
+	$(PACKAGE)-create-db.desktop \
+	$(PACKAGE)-create-usr.desktop \
+	$(PACKAGE)-drop-db.desktop \
+	$(PACKAGE)-drop-usr.desktop
 
 # The icon files
 aiki_icon_files = \
@@ -12,11 +16,27 @@ aiki_icon_files = \
 # Additional files to distribute
 EXTRA_DIST = \
 	$(PACKAGE).svg \
-	desktop.in
+	$(PACKAGE)-in.desktop \
+	$(PACKAGE)-create-db-in.desktop \
+	$(PACKAGE)-create-usr-in.desktop \
+	$(PACKAGE)-drop-db-in.desktop \
+	$(PACKAGE)-drop-usr-in.desktop \
+	$(PACKAGE)-in.directory \
+	$(PACKAGE)-in.menu
 
 # Additional files to remove on dist-clean
 DISTCLEANFILES = \
-	$(PACKAGE).desktop
+	$(aiki_entry_files) \
+	$(PACKAGE).directory \
+	$(PACKAGE).menu
+
+# The directory to put the files
+aiki_menudir = \
+	$(PKG_MENU_DIR)
+
+# The directory to put the files
+aiki_desktopdir = \
+	$(PKG_DESKTOP_DIR)
 
 # The directory to put the files
 aiki_entrydir = \
@@ -25,6 +45,14 @@ aiki_entrydir = \
 # The directory to put the files
 aiki_icondir = \
 	$(PKG_ICON_DIR)
+
+# The desktop menu data
+aiki_menu_DATA = \
+	$(PACKAGE).menu
+
+# The desktop directory data
+aiki_desktop_DATA = \
+	$(PACKAGE).directory
 
 # The desktop entry data
 aiki_entry_DATA = \
