--- a/rpm/spec.in
+++ b/rpm/spec.in
@@ -29,7 +29,7 @@ Summary:   @SUMMARY@
 License:   @LICENSE@ and GPLv2 and LGPLv2+ and zlib and BSD
 Group:     @GROUP@
 URL:       %{url}
-Source0:   %{url}/files/%{pkgdist}
+Source0:   %{url}/files/pkgs/%{pkgdist}
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 BuildArch: noarch
 
