Added standard category to desktop entry files

--- a/desktop/aiki-create-db-in.desktop
+++ b/desktop/aiki-create-db-in.desktop
@@ -5,4 +5,4 @@ Name=2. Create mysql @PACKAGE@ database
 Icon=@PACKAGE@
 Exec=@PACKAGE@ -C
 Terminal=true
-Categories=X-@PACKAGE@;
+Categories=Network;X-@PACKAGE@;
