--- a/desktop/aiki-drop-usr-in.desktop
+++ b/desktop/aiki-drop-usr-in.desktop
@@ -5,4 +5,4 @@ Name=5. Remove mysql @PACKAGE@ user
 Icon=@PACKAGE@
 Exec=@PACKAGE@ -d
 Terminal=true
-Categories=X-@PACKAGE@;
+Categories=Network;X-@PACKAGE@;
