--- a/desktop/aiki-create-usr-in.desktop
+++ b/desktop/aiki-create-usr-in.desktop
@@ -5,4 +5,4 @@ Name=1. Create mysql @PACKAGE@ user
 Icon=@PACKAGE@
 Exec=@PACKAGE@ -c
 Terminal=true
-Categories=X-@PACKAGE@;
+Categories=Network;X-@PACKAGE@;
